# 87s_research

./: .gitignore  README.md  avrdude_output.txt  generate_media.sh  meetings.md  notes.md  pete.kicad_mod  resistor_bank.py  resistor_bank_optimal.py
.github/scripts/: generate_kicad_schematics.sh
.github/workflows/: generate_kicad_schematics.yaml  test.yaml  test2.yaml
block_diagrams/: .$complete_system.drawio.dtmp  87s Boards.drawio  complete_system.drawio  controller.drawio  power_supply.drawio
boards/bidirectional_load_switch/assembly/: bidirectional_load_switch.lbrn2
boards/bidirectional_load_switch/bom/: ibom.html
boards/bidirectional_load_switch/design/: gate_resistor.py  resistor_bank_optimal.py
boards/bidirectional_load_switch/firmware/: CMakeLists.txt  avr.toolchain.cmake  build.sh
boards/bidirectional_load_switch/firmware/src/: main.c
boards/bidirectional_load_switch/kicad/: bidirectional_load_switch.kicad_sch  switching_channel.kicad_sch
boards/bidirectional_load_switch/pcb/: bidirectional_load_switch.kicad_pcb  bidirectional_load_switch.kicad_sch  sym-lib-table
boards/controller/: bom.csv  bom.md
boards/controller-old/design/: mcu_requirements.md
boards/controller-old/firmware/: firmware.ioc
boards/controller-old/pcb/: charger.kicad_sch  isolated_flyback.kicad_sch  usb_c_pd.kicad_sch
boards/controller/design/: HSE  charger.md  mcu_requirements.md  power_button.md  usb_protection.md
boards/controller/firmware/: .mxproject  Makefile  controller.ioc  firmware.ioc
boards/controller/firmware-VITx/: .mxproject  CMakeLists.txt  firmware-VITx.ioc
boards/controller/firmware-VITx/cmake/stm32cubemx/: CMakeLists.txt
boards/controller/pcb/: battery_adc.kicad_sch  bls_interface.kicad_sch  buck_boost.kicad_sch  buck_converter_5v.kicad_sch  charger.kicad_sch  controller.kicad_pro  controller.kicad_sch  encoder.kicad_sch  fp-lib-table  isolated_flyback.kicad_sch  lcd.kicad_sch  ldo_3v3.kicad_sch  microcontroller.kicad_sch  power_button.kicad_sch  sym-lib-table  usb.kicad_sch  usb_c_pd.kicad_sch
boards/controller/pcb-old/: battery_adc.kicad_sch  buck_boost.kicad_sch  charger.kicad_sch  controller.kicad_sch  encoder.kicad_sch  isolated_flyback.kicad_sch  ldo_3v3.kicad_sch  microcontroller.kicad_sch  sym-lib-table
boards/power_supply/design/: LM25183.xlsx  buck_boost.py  current_limits.xlsx
boards/power_supply/pcb/: buck_boost.kicad_sch  charger.kicad_sch  fp-lib-table  ibom.html  isolated_flyback.kicad_sch  power_supply.kicad_pcb  power_supply.kicad_pro  power_supply.kicad_sch  sym-lib-table  usb_c_pd.kicad_sch
design/bidirectional_load_switch/: LM25183.xlsx  resistor_bank_optimal.py  resistor_bank_real.py  ~$LM25183.xlsx
design/power_supply/: LM(2)518x PSR flyback converter quickstart tool revB.xlsx  LM25183.xlsx  notes.md
drawio/: .$87s Boards.drawio.bkp  87s Boards.drawio  PSU.drawio
financials/: timesheet.xlsx
freecad/: mosfet.20241003-173800.FCBak  mosfet.20241004-155637.FCBak  mosfet.FCStd  mosfet.step  mosfet.wrl  new_mosfet.20241012-191058.FCBak  new_mosfet.FCStd
kicad/: bidirectional_load_switch.kicad_pcb  bidirectional_load_switch.kicad_pro  bidirectional_load_switch.kicad_sch  fp-lib-table  isolated_dc_to_dc.kicad_sch  isolated_dc_to_dc_converter.kicad_sch  rectifier.kicad_sch  switching_channel.kicad_sch  switching_channels.kicad_sch  sym-lib-table  ~bidirectional_load_switch.kicad_sch.lck
kicad/bidirectional_load_switch/: #auto_saved_files#  DRC.rpt  bidirectional_load_switch.kicad_dru  bidirectional_load_switch.kicad_pcb  bidirectional_load_switch.kicad_pro  bidirectional_load_switch.kicad_sch  fp-lib-table  generate_gerbers.bat  generate_media.sh  switching_channel.kicad_sch  sym-lib-table
kicad/bidirectional_load_switch/bom/: bidirectional_load_switch.csv  bom.xlsx  ibom.html
kicad/bidirectional_load_switch/gerbers/: bidirectional_load_switch-B_Cu.gbl  bidirectional_load_switch-B_Cu.gbr  bidirectional_load_switch-B_Mask.gbr  bidirectional_load_switch-B_Mask.gbs  bidirectional_load_switch-B_Paste.gbp  bidirectional_load_switch-B_Paste.gbr  bidirectional_load_switch-B_Silkscreen.gbo  bidirectional_load_switch-B_Silkscreen.gbr  bidirectional_load_switch-Back.gbr  bidirectional_load_switch-Edge_Cuts.gbr  bidirectional_load_switch-Edge_Cuts.gm1  bidirectional_load_switch-F_Cu.gbr  bidirectional_load_switch-F_Cu.gtl  bidirectional_load_switch-F_Mask.gbr  bidirectional_load_switch-F_Mask.gts  bidirectional_load_switch-F_Paste.gbr  bidirectional_load_switch-F_Paste.gtp  bidirectional_load_switch-F_Silkscreen.gbr  bidirectional_load_switch-F_Silkscreen.gto  bidirectional_load_switch-Front.gbr  bidirectional_load_switch-NPTH-drl_map.gbr  bidirectional_load_switch-NPTH.drl  bidirectional_load_switch-PTH-drl_map.gbr  bidirectional_load_switch-PTH.drl  bidirectional_load_switch-job.gbrjob
kicad/bidirectional_load_switch/order_info/: digikey_list_link.txt
kicad/power_supply/: bom.csv  bom.xlsx  buck_boost.kicad_sch  charger.kicad_sch  fp-lib-table  isolated_dc_to_dc.kicad_sch  isolated_flyback.kicad_sch  power_supply.kicad_pcb  power_supply.kicad_pro  power_supply.kicad_sch  sym-lib-table  untitled.kicad_sch  usb_c_pd.kicad_sch
kicad/power_supply_old/: 5_volt_dc_to_dc.kicad_sch  isolated_dc_to_dc.kicad_sch  power_supply.kicad_pcb  power_supply.kicad_sch  switching_channel.kicad_sch
kicad/symbols/750313445/: 2024-09-19_19-07-24.kicad_sym
kicad/symbols/LM25184NGUR/: 2024-09-19_18-15-14.kicad_sym
kicad/symbols/PDZVTR9_1B/: 2024-09-19_22-29-59.kicad_sym
ncur/: abstract_submission_draft.docx
ncur/paper/: draft.odt
ncur/travel_grant/: budget.md  budget.ods
notes/: notes.md
oscope/: 87s_scope_setup.stp  RigolDS3.csv  graph.py  memory0.csv  screen0.csv  screen31.csv
spice/: bidirectional_switch.asc  bidirectional_switch.op.raw  bidirectional_switch.raw
spice/falstad/: bidirectional_switch  overcurrent  overcurrent_logic
spice/ltspice/: bidirectional_switch.asc  bidirectional_switch.op.raw  bidirectional_switch.plt  bidirectional_switch.raw  over_current.asc
timesheet/: timesheet.csv  timesheet.py
(+374 files in other folders)
